[TASK] Streamline dropdowns behaviour on all breakpoints for "Clickable" Mega menu

--- a/Resources/Public/Scss/Theme/_megamenu.scss
+++ b/Resources/Public/Scss/Theme/_megamenu.scss
@@ -80,6 +80,11 @@ $mega-menu-dropdown-tablet-max-columns: 2 !default;
 }
 
 @include until($navbar-breakpoint) {
+    .navbar-item.is-mega:not(.is-hoverable):not(.is-active) {
+        .navbar-dropdown {
+            display: none;
+        }
+    }
   .navbar-dropdown {
     .container {
       padding: 0;
