--- a/Resources/Public/Scss/Theme/_card.scss
+++ b/Resources/Public/Scss/Theme/_card.scss
@@ -29,6 +29,7 @@ $card-image-link-display: initial !default;
 
 .card{
   border: $card-border-width $card-border-style $card-border-color;
+  overflow: hidden;
   .no-border &{
     border: none;
     box-shadow: none;
