[BUGFIX] Prevent double padding when using a page layout with a sidebar

--- a/Resources/Public/Scss/Theme/_container.scss
+++ b/Resources/Public/Scss/Theme/_container.scss
@@ -1,4 +1,4 @@
-.container {
+.container:not(#content > *) {
   @include until($tablet) {
     padding-left: $gap / 2;
     padding-right: $gap / 2;
